--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,8 @@
 {
   "name": "ie-blocker",
-  "description": "Block outdated Internet Explorer from your website and display a friendly message of upgrading to modern browsers.",
-  "main": "ie-blocker/ie-blocker.js",
+  "description": "A lightweight modal component, which 'politely' suggests your users to stop using outdated IE browsers.",
   "authors": [
-    "Chris Pan"
+    "Chris Pan <mail@panteng.me>"
   ],
   "license": "MIT",
   "homepage": "https://github.com/panteng/ie-blocker",
@@ -15,7 +14,6 @@
     "tests",
     "demos",
     "screenshot.png",
-    "screenshot.zhCN.png",
     ".gitignore"
   ]
 }
