--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "type": "git",
     "url": "git+https://github.com/panteng/ie-blocker.git"
   },
-  "author": "Chris Pan <mail@panteng.me>",
+  "author": "Chris Pan <chrispan.pt@gmail.com>",
   "license": "MIT"
 }
